Добавление интерфеса и сервиса для get запросов по тиблице номенклатруа.

--- a/src/app/administration/components/table/table.component.html
+++ b/src/app/administration/components/table/table.component.html
@@ -1,131 +1,15 @@
 <div id="tableBlock">
+
   <div id="thead" class="tableContent">
-    <div class="Cell "><div><div class="num">Номер</div><div class="sort">▲</div></div></div>
+    <div class="Cell" (click)="updateSort"><div><div class="num">Номер</div><div class="sort">▲</div></div></div>
     <div class="Cell"><div><div class="num">Название</div><div class="sort">▲</div></div></div>
     <div class="Cell"><div><div class="num">Категория</div><div class="sort">▼</div></div></div>
     <div class="Cell"><div><div class="num">Субкатегория</div><div class="sort">▼</div></div></div>
     <div class="Cell"><div><div class="num">Фирма</div><div class="sort">▼</div></div></div>
   </div>
-  <div class="tableContent">
-    <div class="Cell">Номер</div>
-    <div class="Cell">Название</div>
-    <div class="Cell">Категория</div>
-    <div class="Cell">Субкатегория</div>
-    <div class="Cell">Фирма</div>
-  </div>
-  <div class="tableContent">
-    <div class="Cell">Номер</div>
-    <div class="Cell">Название</div>
-    <div class="Cell">Категория</div>
-    <div class="Cell">Субкатегория</div>
-    <div class="Cell">Фирма</div>
-  </div>
-  <div class="tableContent">
-    <div class="Cell">Номер</div>
-    <div class="Cell">Название</div>
-    <div class="Cell">Категория</div>
-    <div class="Cell">Субкатегория</div>
-    <div class="Cell">Фирма</div>
-  </div>
-  <div class="tableContent">
-    <div class="Cell">Номер</div>
-    <div class="Cell">Название</div>
-    <div class="Cell">Категория</div>
-    <div class="Cell">Субкатегория</div>
-    <div class="Cell">Фирма</div>
-  </div>
-  <div class="tableContent">
-    <div class="Cell">Номер</div>
-    <div class="Cell">Название</div>
-    <div class="Cell">Категория</div>
-    <div class="Cell">Субкатегория</div>
-    <div class="Cell">Фирма</div>
-  </div>
-  <div class="tableContent">
-    <div class="Cell">Номер</div>
-    <div class="Cell">Название</div>
-    <div class="Cell">Категория</div>
-    <div class="Cell">Субкатегория</div>
-    <div class="Cell">Фирма</div>
-  </div>
-
 
   <div class="tableContent">
     <div class="Cell">Номер</div>
-    <div class="Cell">Название</div>
-    <div class="Cell">Категория</div>
-    <div class="Cell">Субкатегория</div>
-    <div class="Cell">Фирма</div>
-  </div>
-  <div class="tableContent">
-    <div class="Cell">Номер</div>
-    <div class="Cell">Название</div>
-    <div class="Cell">Категория</div>
-    <div class="Cell">Субкатегория</div>
-    <div class="Cell">Фирма</div>
-  </div>
-
-  <div class="tableContent">
-    <div class="Cell">Номер</div>
-    <div class="Cell">Название</div>
-    <div class="Cell">Категория</div>
-    <div class="Cell">Субкатегория</div>
-    <div class="Cell">Фирма</div>
-  </div>
-
-  <div class="tableContent">
-    <div class="Cell">Номер</div>
-    <div class="Cell">Название</div>
-    <div class="Cell">Категория</div>
-    <div class="Cell">Субкатегория</div>
-    <div class="Cell">Фирма</div>
-  </div>
-
-
-  <div class="tableContent">
-    <div class="Cell">Номер</div>
-    <div class="Cell">Название</div>
-    <div class="Cell">Категория</div>
-    <div class="Cell">Субкатегория</div>
-    <div class="Cell">Фирма</div>
-  </div>
-
-
-  <div class="tableContent">
-    <div class="Cell">Номер</div>
-    <div class="Cell">Название</div>
-    <div class="Cell">Категория</div>
-    <div class="Cell">Субкатегория</div>
-    <div class="Cell">Фирма</div>
-  </div>
-
-
-  <div class="tableContent">
-    <div class="Cell">22</div>
-    <div class="Cell">Название</div>
-    <div class="Cell">Категория</div>
-    <div class="Cell">Субкатегория</div>
-    <div class="Cell">Фирма</div>
-  </div>
-
-  <div class="tableContent">
-    <div class="Cell">22</div>
-    <div class="Cell">Название</div>
-    <div class="Cell">Категория</div>
-    <div class="Cell">Субкатегория</div>
-    <div class="Cell">Фирма</div>
-  </div>
-
-  <div class="tableContent">
-    <div class="Cell">22</div>
-    <div class="Cell">Название</div>
-    <div class="Cell">Категория</div>
-    <div class="Cell">Субкатегория</div>
-    <div class="Cell">Фирма</div>
-  </div>
-
-  <div class="tableContent">
-    <div class="Cell">11</div>
     <div class="Cell">Название</div>
     <div class="Cell">Категория</div>
     <div class="Cell">Субкатегория</div>
