--- a/src/app/administration/components/main/main.component.html
+++ b/src/app/administration/components/main/main.component.html
@@ -15,7 +15,7 @@
     </div>
   </div>
   <div id="footer">
-    <app-count></app-count>
+    <app-count (rowsUpt)="test($event)"></app-count>
     <app-page></app-page>
   </div>
 </div>
