--- a/src/app/administration/components/table/table.component.html
+++ b/src/app/administration/components/table/table.component.html
@@ -1,11 +1,11 @@
 <div id="tableBlock">
 
   <div id="thead" class="tableContent">
-    <div class="Cell" (click)="updateSort"><div><div class="num">Номер</div><div class="sort">▲</div></div></div>
-    <div class="Cell"><div><div class="num">Название</div><div class="sort">▲</div></div></div>
-    <div class="Cell"><div><div class="num">Категория</div><div class="sort">▼</div></div></div>
-    <div class="Cell"><div><div class="num">Субкатегория</div><div class="sort">▼</div></div></div>
-    <div class="Cell"><div><div class="num">Фирма</div><div class="sort">▼</div></div></div>
+    <div class="Cell cellSort" (click)="updateSort('number')" data-id appTabs><div><div class="num">Номер</div><div class="sort">▲test</div></div></div>
+    <div class="Cell cellSort" (click)="updateSort('name')" data-id><div><div class="num">Название</div><div class="sort">▲</div></div></div>
+    <div class="Cell cellSort" (click)="updateSort('category')" ><div><div class="num">Категория</div><div class="sort">▼</div></div></div>
+    <div class="Cell cellSort" (click)="updateSort('subcategory')"><div><div class="num">Субкатегория</div><div class="sort">▼</div></div></div>
+    <div class="Cell cellSort" (click)="updateSort('firm')"><div><div class="num">Фирма</div><div class="sort">▼</div></div></div>
   </div>
 
   <div class="tableContent">
