Добавление анимации на фильтры по шапкам таблицы.

--- a/src/app/administration/components/main/main.component.html
+++ b/src/app/administration/components/main/main.component.html
@@ -10,7 +10,7 @@
         <app-buttons ></app-buttons>
       </div>
       <div id="table">
-        <app-table (sortColumn)="sortdColumn($event)"></app-table>
+        <app-table (sortColumn)="updateTable($event)"></app-table>
       </div>
     </div>
   </div>
