Реализация отправки get раздела справочника. Отображенеи таблиц для вкладок. Сортировка по колонкам. Сортировка по поиску. Сортировка по количеству страниц.

--- a/src/app/administration/components/buttons/buttons.component.html
+++ b/src/app/administration/components/buttons/buttons.component.html
@@ -28,7 +28,7 @@
   </div>
   <div class="input-but">
     <div>
-      <input type="text" name="" placeholder="Поиск">
+      <input type="text" name="" placeholder="Поиск" (keyup)=" searchSort($event)">
     </div>
   </div>
 </div>
