Частичная реализация отображения кнопок для выбора страниц.

--- a/src/app/administration/components/main/main.component.html
+++ b/src/app/administration/components/main/main.component.html
@@ -16,6 +16,6 @@
   </div>
   <div id="footer">
     <app-count (rowsUpt)="updateTable($event)"></app-count>
-    <app-page ></app-page>
+    <app-page [countStr]="countStr" [countRows]="countRows"></app-page>
   </div>
 </div>
